--- a/Guia01_AlvinBaires/pom.xml
+++ b/Guia01_AlvinBaires/pom.xml
@@ -22,6 +22,25 @@
             <version>6.0.3</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.ajaxtags</groupId>
+            <artifactId>ajaxtags</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>displaytag</groupId>
+            <artifactId>displaytag</artifactId>
+            <version>1.1.1</version>
+            </dependency>
+    
+        <dependency>
+          <groupId>displaytag</groupId>
+          <artifactId>displaytag-export-poi</artifactId>
+          <version>1.1.1</version>
+        </dependency>
+
+        
        <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
