--- a/Guia01_AlvinBaires/pom.xml
+++ b/Guia01_AlvinBaires/pom.xml
@@ -17,12 +17,24 @@
     <dependencies>
         
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-<dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>5.0.8</version>
-</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.0.8</version>
+        </dependency>
+        
 
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>5.6.0</version>
+        </dependency>
+                
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.0.1</version>
+        </dependency>
         
         <dependency>
             <groupId>org.ajaxtags</groupId>
@@ -34,19 +46,6 @@
             <groupId>displaytag</groupId>
             <artifactId>displaytag</artifactId>
             <version>1.1.1</version>
-            </dependency>
-    
-        <dependency>
-          <groupId>displaytag</groupId>
-          <artifactId>displaytag-export-poi</artifactId>
-          <version>1.1.1</version>
-        </dependency>
-
-        
-       <dependency>
-            <groupId>net.sf.jasperreports</groupId>
-            <artifactId>jasperreports</artifactId>
-            <version>5.6.0</version>
         </dependency>
         
         <dependency>
@@ -61,6 +60,7 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        
     </dependencies>
 
     <build>
